@@ -263,6 +263,15 @@ public class ShipmentDao implements IShipmentDao {
             }
         }
 
+        // Origin and Destinations are mandatory
+        if(request.getCarrierDetails() == null || IsStringNullOrEmpty(request.getCarrierDetails().getOrigin()) || IsStringNullOrEmpty(request.getCarrierDetails().getDestination()))
+            errors.add("Origin and Destination fields are mandatory.");
+
+        // POL and POD are mandatory for Sea and Air
+        if( ( Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_SEA) || Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_AIR) ) &&
+                (request.getCarrierDetails() == null || IsStringNullOrEmpty(request.getCarrierDetails().getOriginPort()) || IsStringNullOrEmpty(request.getCarrierDetails().getDestinationPort()) ))
+            errors.add("POL and POD fields are mandatory.");
+
         // Container Number can not be repeated
         if (request.getContainersList() != null && request.getContainersList().size() > 0) {
             HashSet<String> hashSet = new HashSet<>();
@@ -526,7 +535,9 @@ public class ShipmentDao implements IShipmentDao {
     private V1DataResponse fetchCarrierDetailsFromV1(String mawbAirlineCode, String type) {
         CommonV1ListRequest request = new CommonV1ListRequest();
         List<Object> criteria = new ArrayList<>();
-        criteria.addAll(List.of(List.of("AirlineCode"), "=", mawbAirlineCode));
+        criteria.add(Arrays.asList(List.of("AirlineCode"), "=", mawbAirlineCode));
+        criteria.add("and");
+        criteria.add(Arrays.asList(List.of("HasAirPort"), "=", 1));
         request.setCriteriaRequests(criteria);
         CarrierListObject carrierListObject = new CarrierListObject();
         carrierListObject.setListObject(request);
@@ -561,5 +572,10 @@ public class ShipmentDao implements IShipmentDao {
 
     @Transactional
     public void saveCreatedDateAndUser(Long id, String createdBy, LocalDateTime createdDate) {shipmentRepository.saveCreatedDateAndUser(id, createdBy, createdDate);}
+
+    @Override
+    public List<ShipmentDetails> getShipmentNumberFromId(List<Long> shipmentIds) {
+        return shipmentRepository.getShipmentNumberFromId(shipmentIds);
+    }
 
 }
